--- a/website/index.html
+++ b/website/index.html
@@ -11,8 +11,7 @@
         <p><font face="Arial" size="4">Coming Soon!</font></p>
         <hr width="80%" color="#FF0000">
         <p><marquee>Welcome to the future home of benjmacaro.dev!</marquee></p>
-        <p>pls work (test change)</p>
+        <p>pls work (test change2)</p>
     </center>
 </body>
 </html>
-<\!-- Test -->
