--- a/website/index.html
+++ b/website/index.html
@@ -1,17 +1,33 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
+
 <head>
-    <title>Welcome to My Web 1.0 Site!</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+  <title>Welcome to My Web 1.0 Site!</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
-<body bgcolor="#000080" text="#FFFF00" link="#00FF00" vlink="#FF00FF">
-    <center>
-        <h1><font face="Comic Sans MS">🚧 Under Construction 🚧</font></h1>
-        <img src="images/gifs/construction.gif" alt="Under Construction">
-        <p><font face="Arial" size="4">Coming Soon!</font></p>
-        <hr width="80%" color="#FF0000">
-        <p><marquee>Welcome to the future home of benjmacaro.dev!</marquee></p>
-        <p>pls work (test change3)</p>
-    </center>
+
+<body background-color="#17263cff" text="#f6ffdaff" link="#00FF00" vlink="#FF00FF">
+  <center>
+    <table border="2" cellpadding="5" cellspacing="0" bgcolor="#000000">
+      <tr>
+        <td align="center">
+          <font size="2" color="#00FF00">Visitor #</font><br>
+          <iframe src="counter/counter.php" width="100" height="25" frameborder="0" scrolling="no" marginwidth="0"
+            marginheight="0">
+          </iframe>
+        </td>
+      </tr>
+    </table>
+    <!--
+    <h1><font face="Comic Sans MS">🚧 Under Construction 🚧</font></h1>
+    <img src="images/gifs/construction.gif" alt="Under Construction">
+    <p><font face="Arial" size="4">Coming Soon!</font></p>
+    <hr width="80%" color="#FF0000">
+    -->
+    <p>
+      <marquee>Welcome to the future home of benjmacaro.dev!</marquee>
+    </p>
+  </center>
 </body>
+
 </html>
