--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 
-<body background-color="#17263cff" text="#f6ffdaff" link="#00FF00" vlink="#FF00FF">
+<body bgcolor="rgba(23, 38, 60, 1)" text="#f6ffdaff" link="#00FF00" vlink="#FF00FF">
   <center>
     <table border="2" cellpadding="5" cellspacing="0" bgcolor="#000000">
       <tr>
