--- a/website/index.html
+++ b/website/index.html
@@ -18,14 +18,8 @@
         </td>
       </tr>
     </table>
-    <!--
-    <h1><font face="Comic Sans MS">🚧 Under Construction 🚧</font></h1>
-    <img src="images/gifs/construction.gif" alt="Under Construction">
-    <p><font face="Arial" size="4">Coming Soon!</font></p>
-    <hr width="80%" color="#FF0000">
-    -->
     <p>
-      <marquee>Welcome to the future home of benjmacaro.dev!</marquee>
+      <marquee>Welcome to benjmacaro.dev!</marquee>
     </p>
   </center>
 </body>
