--- a/website/index.html
+++ b/website/index.html
@@ -2,26 +2,39 @@
 <html>
 
 <head>
-  <title>Welcome to My Web 1.0 Site!</title>
+  <title>benjmacaro.dev</title>
   <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+  <meta name="keywords" content="web1.0, portfolio">
+  <meta name="description" content="my web1.0 inspired portfolio">
+  <meta name="author" content="Benj Macaro">
 </head>
 
-<body bgcolor="#17263c" text="#f6ffda" link="#00FF00" vlink="#FF00FF">
-  <center>
-    <table border="2" cellpadding="5" cellspacing="0" bgcolor="#000000">
-      <tr>
-        <td align="center">
-          <font size="2" color="#00FF00">Visitor #</font><br>
-          <iframe src="counter/counter.php" width="120" height="25" frameborder="0" scrolling="no" marginwidth="0"
-            marginheight="0">
-          </iframe>
-        </td>
-      </tr>
-    </table>
-    <p>
-      <marquee>Welcome to benjmacaro.dev!</marquee>
-    </p>
-  </center>
+<body bgcolor="#bdffe0ff">
+  <table width="800" cellpadding="0" cellspacing="0" align="center">
+    <tr>
+      <td align="center" height="400" valign="middle" style="vertical-align: middle;">
+        <a href="home.html" style="text-decoration: none;">
+          <font face="helvetica">
+            <h1
+              style="
+                font-size: 64px;
+                color: rgba(41, 47, 50, 1);
+                margin: 0;
+                text-align: center;
+              "
+            >
+              [ ENTER ]
+            </h1>
+          </font>
+        </a>
+        <br><br>
+        <!-- Last Updated -->
+        <font face="helvetica" size="2" color="rgba(41, 47, 50, 0.5)">
+          Last Updated: October 2025
+        </font>
+      </td>
+    </tr>
+  </table>
 </body>
 
 </html>
