--- a/website/index.html
+++ b/website/index.html
@@ -7,29 +7,23 @@
   <meta name="keywords" content="web1.0, portfolio">
   <meta name="description" content="my web1.0 inspired portfolio">
   <meta name="author" content="Benj Macaro">
+  <link rel="stylesheet" href="styles.css">
 </head>
 
-<body bgcolor="#bdffe0ff">
-  <table width="800" cellpadding="0" cellspacing="0" align="center">
+<body>
+  <table class="splash-container" width="800" cellpadding="0" cellspacing="0" align="center">
     <tr>
-      <td align="center" height="400" valign="middle" style="vertical-align: middle;">
-        <a href="home.html" style="text-decoration: none;">
+      <td class="text-center valign-middle" height="400">
+        <a href="home.php" class="enter-link">
           <font face="helvetica">
-            <h1
-              style="
-                font-size: 64px;
-                color: rgba(41, 47, 50, 1);
-                margin: 0;
-                text-align: center;
-              "
-            >
+            <h1 class="enter-title">
               [ ENTER ]
             </h1>
           </font>
         </a>
         <br><br>
         <!-- Last Updated -->
-        <font face="helvetica" size="2" color="rgba(41, 47, 50, 0.5)">
+        <font face="helvetica" class="last-updated" size="2">
           Last Updated: October 2025
         </font>
       </td>
