--- a/website/index.html
+++ b/website/index.html
@@ -23,7 +23,7 @@
         </a>
         <br><br>
         <!-- Last Updated -->
-        <font face="helvetica" class="last-updated" size="2">
+        <font face="helvetica" class="last-updated">
           Last Updated: October 2025
         </font>
       </td>
